Fix RTL text alignment in bootstrap4 (#3353)

--- a/nikola/data/themes/bootstrap4-jinja/assets/css/theme.css
+++ b/nikola/data/themes/bootstrap4-jinja/assets/css/theme.css
@@ -232,3 +232,8 @@ ul.pager li a {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
+
+/* Override incorrect Bootstrap 4 default */
+html[dir="rtl"] body {
+    text-align: right;
+}
